Commit 31.1 - Gauna Nicolas (24/08/2024)